# dataverse

./: .gitignore  Cargo.toml  README.md  bump.sh  dist-workspace.toml  flake.nix
dataverse-cli/: Cargo.toml
dataverse-cli/wix/: main.wxs
dataverse-lib/: .env.example  Cargo.toml
dataverse-lib/examples/: browser_auth.rs  device_code_auth.rs  password_auth.rs  public_password_auth.rs
dataverse-lib/src/: client.rs  lib.rs  response.rs
dataverse-lib/src/api/: aggregate.rs  association.rs  async_operation.rs  audit.rs  batch.rs  crud.rs  execute.rs  fetch.rs  forms.rs  metadata.rs  mod.rs  options.rs  query.rs  views.rs
dataverse-lib/src/api/batch/: mod.rs  multipart.rs  response.rs
dataverse-lib/src/api/metadata/: attribute.rs  entity.rs  mod.rs  option_set.rs  relationship.rs
dataverse-lib/src/api/query/: filter.rs  mod.rs  order.rs  page.rs
dataverse-lib/src/api/schema/: attribute.rs  entity.rs  mod.rs  option_set.rs  relationship.rs
dataverse-lib/src/auth/: auto_refresh.rs  browser.rs  common.rs  device_code.rs  mod.rs  password.rs  token.rs
dataverse-lib/src/cache/: config.rs  memory.rs  metadata.rs  mod.rs  sqlite.rs
dataverse-lib/src/error/: api.rs  auth.rs  concurrency.rs  dataverse.rs  field.rs  mod.rs  validation.rs
dataverse-lib/src/index/: mod.rs  schema.rs
dataverse-lib/src/model/: entity.rs  mod.rs  record.rs  record_serde.rs  value.rs  value_serde.rs  value_type.rs
dataverse-lib/src/model/form/: cell.rs  control.rs  event.rs  mod.rs  section.rs  tab.rs
dataverse-lib/src/model/metadata/: attribute.rs  entity.rs  mod.rs  multi_select_picklist.rs  option_set.rs  picklist.rs  relationship.rs  state.rs  status.rs
dataverse-lib/src/model/types/: aliased.rs  entity_ref.rs  file.rs  mod.rs  money.rs  navigation.rs  option_set.rs  relationship.rs
dataverse-lib/src/rate_limit/: concurrency.rs  limiter.rs  mod.rs  retry.rs
dataverse-lib/src/stream/: fetchxml.rs  mod.rs  odata.rs
dataverse-lib/tests/: fetch_entity_metadata.rs  password_auth.rs
dataverse-tui/: Cargo.toml  DESIGN_LANGUAGE.md
dataverse-tui/src/: client_manager.rs  main.rs  paths.rs
dataverse-tui/src/apps/: entity_browser.rs  mod.rs
dataverse-tui/src/apps/audit_log/: mod.rs  row.rs  select_modal.rs
dataverse-tui/src/apps/deadline_import/: diff.rs  excel.rs  fetch.rs  mod.rs  operations.rs  scope.rs  transform.rs  types.rs
dataverse-tui/src/apps/entity_browser/: mod.rs  row.rs  service.rs
dataverse-tui/src/apps/entity_explorer/: mod.rs  service.rs
dataverse-tui/src/apps/export/: io.rs  (+1 more)
dataverse-tui/src/credentials/: mod.rs  models.rs  sqlite.rs  token_provider.rs
dataverse-tui/src/file_io/: convert.rs  csv.rs  excel.rs  mod.rs
dataverse-tui/src/formatting/: mod.rs  parse.rs
dataverse-tui/src/lua/: error.rs  mod.rs  runtime.rs
dataverse-tui/src/migrations/: mod.rs
dataverse-tui/src/modals/: browser_auth.rs  confirm.rs  error.rs  error_acknowledgment.rs  file_browser.rs  filter_builder.rs  loading.rs  mod.rs  odata_fetch.rs  parallel_loading.rs  searchable_list.rs  setup.rs  sheet_selector.rs
dataverse-tui/src/settings/: backend.rs  mod.rs  setting.rs  sqlite.rs  types.rs
dataverse-tui/src/systems/: launcher.rs  mod.rs  setup.rs  shutdown.rs  taskbar.rs
dataverse-tui/src/widgets/: braille_spinner.rs  loading_overlay.rs  mod.rs  scrolling_text.rs  spinner.rs
dataverse-tui/wix/: main.wxs
rafter/: Cargo.toml  README.md
rafter/docs/: README.md  animations.md  apps.md  architecture.md  async.md  communication.md  core-concepts.md  errors.md  getting-started.md  interactions.md  keybinds-and-handlers.md  modals.md  multi-app.md  overlays.md  overview.md  page-macro.md  state.md  styling.md  validation.md  views.md
rafter/docs/advanced/: animations.md  systems.md
rafter/docs/widgets/: autocomplete.md  button.md  checkbox.md  collapsible.md  input.md  list.md  overview.md  radio-group.md  scroll-area.md  select.md  table.md  tree.md
rafter/examples/: autocomplete.rs  context_menu.rs  counter.rs  forms.rs  list.rs  modal_animation.rs  modals.rs  multi_app.rs  pagination.rs  perf_list.rs  reader.rs  scheduled_toast.rs  select.rs  table.rs  tree.rs  widgets.rs
rafter/examples/explorer/: main.rs
rafter/examples/modals/: choice.rs  input.rs  main.rs  nested.rs  position.rs  sizes.rs
rafter/src/: app.rs  app_context.rs  color.rs  context.rs  context_menu.rs  event.rs  events.rs  focus.rs  global_context.rs  handler_context.rs  instance.rs  job.rs  keybinds.rs  lib.rs  lifecycle.rs  modal.rs  node.rs  overlay.rs  prelude.rs  registration.rs  request.rs  resource.rs  state.rs  style.rs  system.rs  theme.rs  toast.rs  wakeup.rs  widget.rs
rafter/src/app/: any_instance.rs  config.rs  error.rs  instance.rs  mod.rs  registration.rs  registry.rs  traits.rs
rafter/src/components/: events.rs  mod.rs  selection.rs  traits.rs
rafter/src/input/: focus.rs  keybinds.rs  mod.rs
rafter/src/layers/: mod.rs  modal.rs  system_overlay.rs
rafter/src/node/: layout.rs  mod.rs
rafter/src/runtime/: animation.rs  dispatch.rs  enrich.rs  event_loop.rs  events.rs  handlers.rs  hit_test.rs  input.rs  mod.rs  modal.rs  render.rs  scheduler.rs  state.rs  terminal.rs  wakeup.rs
rafter/src/styling/: color.rs  mod.rs  style.rs  theme.rs
rafter/src/system/: mod.rs
rafter/src/theme/: default.rs  mod.rs
rafter/src/utils/: geometry.rs  mod.rs  text.rs
rafter/src/validation/: error_display.rs  mod.rs  result.rs  validatable.rs  validator.rs
rafter/src/widgets/: autocomplete.rs  button.rs  card.rs  checkbox.rs  collapsible.rs  date_picker.rs  events.rs  input.rs  list.rs  mod.rs  number_input.rs  radio.rs  scroll.rs  select.rs  selection.rs  table.rs  text.rs  traits.rs  tree.rs  virtual_scroller.rs
rafter/tests/: error.rs  fuzzy_filter.rs  geometry.rs  text.rs  theme.rs
(+520 files in other folders)
