[workspace]
resolver = "2"
members = [
    "tuidom",
    "rafter",
    "rafter-derive",
    "dataverse-lib",
    "dataverse-cli",
    "dataverse-tui",
    "dataverse-tui-derive",
]

[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"
packages = ["dataverse-tui"]
installers = ["shell", "powershell", "msi"]
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
install-path = "CARGO_HOME"
install-updater = false
unix-archive = ".tar.gz"

[workspace.lints.clippy]
all = "warn"
