[package]
name = "dataverse-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3.31"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["server", "http1"] }
hyper-util = { version = "0.1.19", features = ["tokio"] }
rand = "0.9.2"
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls"] }
rust_decimal = { version = "1.39.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["sync", "time", "net"] }
tokio-util = "0.7.18"
url = "2.5.8"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
