[package]
name = "dataverse-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
rafter = { path = "../rafter" }
tuidom = { path = "../tuidom" }
tokio = { version = "1", features = ["full"] }
simplelog = "0.12"
log = "0.4"
inventory = "0.3"
async-sqlite = "0.3"
rusqlite = "0.32"
bincode = "1"
dashmap = "6"
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
thiserror = "2"
directories = "5"
chrono = "0.4"
dataverse-lib = { path = "../dataverse-lib" }
open = "5"
tokio-util = "0.7"
url = "2"
