[package]
name = "dataverse-tui"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/norpie/dataverse"
authors = ["Konsta Kuosmanen <konsta@kuosmanen.dev>"]

[package.metadata.wix]
upgrade-guid = "7DBFB9D9-227D-44AD-AACA-F9626DB57770"
path-guid = "C691FA0C-5DCE-4215-AFBB-02E6C66498D9"
license = false
eula = false

[dependencies]
rafter = { path = "../rafter" }
tuidom = { path = "../tuidom" }
dataverse-tui-derive = { path = "../dataverse-tui-derive" }
tokio = { version = "1", features = ["full"] }
simplelog = "0.12"
log = "0.4"
inventory = "0.3"
async-sqlite = "0.3"
rusqlite = "0.32"
bincode = { version = "2", features = ["serde"] }
dashmap = "6"
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
thiserror = "2"
directories = "5"
chrono = "0.4"
chrono-tz = "0.10"
dataverse-lib = { path = "../dataverse-lib" }
open = "5"
tokio-util = "0.7"
url = "2"
nucleo-matcher = "0.3"
sha2 = "0.10"
include_dir = "0.7"
uuid = { version = "1.19.0", features = ["v5"] }
csv = "1.3"
rust_xlsxwriter = "0.79"
calamine = { version = "0.26", features = ["dates"] }
rust_decimal = { version = "1", features = ["std"] }
mlua = { version = "0.10", features = ["luau", "serialize"] }
regex = "1"
rayon = "1"
serde_json = "1"
