[package]
name = "rafter"
version = "0.1.0"
edition = "2024"

[dependencies]
rafter-derive = { path = "../rafter-derive" }
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
inventory = "0.3"
thiserror = "2"
color = "0.3"
log = "0.4"
simplelog = "0.12"
regex = "1"
email_address = "0.2"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }

[lints]
workspace = true
