[package]
name = "rafter"
version = "0.1.0"
edition = "2024"

[dependencies]
rafter-derive = { path = "../rafter-derive" }
tuidom = { path = "../tuidom" }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
inventory = "0.3"
thiserror = "2"
color = "0.3"
log = "0.4"
simplelog = "0.12"
regex = "1"
email_address = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
nucleo-matcher = "0.3"

[lints]
workspace = true
